syntax = "proto3";

// Define the package name for healthcheck
package healthcheck;

// The request message for the health check
message HealthCheckRequest {
  // You can include additional fields here if needed
}

// The response message for the health check
message HealthCheckResponse {
  // Enum for the serving status of the health check
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  
  // Status field using the ServingStatus enum
  ServingStatus status = 1;
}

// Define the health check service
service Health {
  // RPC method for checking health
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}
